--- a/composer.json
+++ b/composer.json
@@ -43,9 +43,7 @@
         "symfony/web-link": "5.4.*",
         "symfony/yaml": "5.4.*",
         "twig/extra-bundle": "^2.12|^3.0",
-        "twig/twig": "^2.12|^3.0"
-    },
-    "require-dev": {
+        "twig/twig": "^2.12|^3.0",
         "phpunit/phpunit": "^9.5",
         "symfony/browser-kit": "5.4.*",
         "symfony/css-selector": "5.4.*",
@@ -55,6 +53,9 @@
         "symfony/stopwatch": "5.4.*",
         "symfony/web-profiler-bundle": "5.4.*",
         "symfony/dotenv": "5.4.*"
+    },
+    "require-dev": {
+      
 
     },
     "config": {
